--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -49,6 +49,7 @@
 	<button class="btn btn-sm btn-default btn-block btn-login btn-ldap-login">
 		{{ _("Login with LDAP") }}</button>
 	{% endif %}
+	<small>Not registered?&nbsp;<a href="/user/register">Register</a></small>
 </div>
 {% endmacro %}
 
@@ -171,6 +172,7 @@
 					<p class="text-center sign-up-message">
 						<a href="#login">{{ _("Back to Login") }}</a>
 					</p>
+					<small>Not registered?&nbsp;<a href="/user/register">register</a></small>
 				</div>
 
 			</form>
