New forgot Password implementation

--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -38,7 +38,7 @@
 	</div>
 
 	<p class="forgot-password-message">
-		<a href="#forgot">{{ _("Forgot Password?") }}</a></p>
+		<a href="/user/reset-password">Forgot Password??</a></p>
 </div>
 
 <div class="page-card-actions">
