--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -6,7 +6,7 @@
 		<label class="form-label sr-only" for="login_email">{{ login_label or _("Email")}}</label>
 		<div class="email-field">
 			<input type="text" id="login_email" class="form-control"
-				placeholder="{% if login_name_placeholder %}{{ login_name_placeholder  }}{% else %}{{ _('jane@example.com') }}{% endif %}"
+				placeholder="Username or Email"
 				required autofocus>
 
 			<svg class="field-icon email-icon" width="20" height="20" viewBox="0 0 20 20" fill="none"
@@ -38,7 +38,7 @@
 	</div>
 
 	<p class="forgot-password-message">
-		<a href="#forgot">{{ _("Forgot Password?") }}</a></p>
+		<a href="/user/reset-password">Forgot Password??</a></p>
 </div>
 
 <div class="page-card-actions">
@@ -49,6 +49,7 @@
 	<button class="btn btn-sm btn-default btn-block btn-login btn-ldap-login">
 		{{ _("Login with LDAP") }}</button>
 	{% endif %}
+	<small>Not registered?&nbsp;<a href="/user/register">Register</a></small>
 </div>
 {% endmacro %}
 
@@ -171,6 +172,7 @@
 					<p class="text-center sign-up-message">
 						<a href="#login">{{ _("Back to Login") }}</a>
 					</p>
+					<small>Not registered?&nbsp;<a href="/user/register">register</a></small>
 				</div>
 
 			</form>
